overtime error revise